WIP : need to fix 422 error when trying to generate table
